--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+body
+{
+	background-color: #cccccc;
+}
+.player_one
+{
+	border: 1px solid black;
+	border-radius: 5px;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	background-color: white;
+}
+a
+{
+	text-decoration: none;
+	color:black;
+}
+.player_two
+{
+	border:1px solid black;
+	background-color: white;
+}
